--- a/signup.html
+++ b/signup.html
@@ -159,7 +159,7 @@
         .back{
             position: relative;
             width:220%;
-            height:1350px;
+            height:fit;
         }
         .box{
             position: absolute;
@@ -171,7 +171,7 @@
         .back{
             position: relative;
             width:120%;
-            height:1350px;
+            height:fit;
         }
         .box{
             position: absolute;
